[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rappa-mcp-server"
version = "0.1.0"
description = "MCP server for playing ABC notation music using rappa"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "python-ly>=0.9.9",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
rappa-mcp = "rappa_mcp_server:main"

[tool.setuptools]
py-modules = ["rappa", "rappa_mcp_server"]
